JavaScriptCore:

Reviewed by Oliver.

        - fix http://bugs.webkit.org/show_bug.cgi?id=17247
          Labelled continue/break can fail in some cases

        Test: fast/js/continue-break-multiple-labels.html

        * kjs/nodes.h:
        (KJS::StatementNode::pushLabel): Made this virtual.
        (KJS::LabelNode::pushLabel): Forward pushLabel calls to the statement inside.

LayoutTests:

        - test for http://bugs.webkit.org/show_bug.cgi?id=17247
          Labelled continue/break can fail in some cases

        * fast/js/continue-break-multiple-labels-expected.txt: Added.
        * fast/js/continue-break-multiple-labels.html: Added.



Canonical link: https://commits.webkit.org/23914@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@30103 268f45cc-cd09-0410-ab3c-d52691b4dbfc