JavaScriptCore/kjs/nodes.h
@@ -214,7 +214,7 @@ namespace KJS {
         int firstLine() const KJS_FAST_CALL { return lineNo(); }
         int lastLine() const KJS_FAST_CALL { return m_lastLine; }
         virtual JSValue* execute(ExecState *exec) KJS_FAST_CALL = 0;
-        void pushLabel(const Identifier& ident) KJS_FAST_CALL { m_labelStack.push(ident); }
+        virtual void pushLabel(const Identifier& ident) KJS_FAST_CALL { m_labelStack.push(ident); }
         virtual Precedence precedence() const { ASSERT_NOT_REACHED(); return PrecExpression; }
         virtual bool isEmptyStatement() const KJS_FAST_CALL { return false; }
 
@@ -2567,12 +2567,13 @@ namespace KJS {
         LabelNode(const Identifier& label, StatementNode* statement) KJS_FAST_CALL
             : m_label(label)
             , m_statement(statement)
-    {
-    }
+        {
+        }
 
         virtual void optimizeVariableAccess(const SymbolTable&, const LocalStorage&, NodeStack&) KJS_FAST_CALL;
         virtual JSValue* execute(ExecState*) KJS_FAST_CALL;
         virtual void streamTo(SourceStream&) const KJS_FAST_CALL;
+        virtual void pushLabel(const Identifier& ident) KJS_FAST_CALL { m_statement->pushLabel(ident); }
 
     private:
         Identifier m_label;
